# ebu_adm_renderer

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
doc/: .gitignore  ADM_XML.rst  ADM_data.rst  ADM_exceptions.rst  ADM_utils.rst  BW64.rst  README.md  common.rst  conf.py  conversion.rst  core.rst  dev_docs.rst  fileio.rst  geom.rst  index.rst  install.rst  layout.rst  layout_file.md  metadata_input.rst  requirements.txt  select_items.rst  timing_fixes.rst  track_processor.rst  update_deps.sh  usage.rst
doc/sphinxarg/: LICENSE  README.md  ext.py  markdown.py
ear/: common.py  compatibility.py  conftest.py  options.py
ear/cmdline/: ambix_to_bwf.py  dev_config.py  error_handler.py  generate_test_file.py  render_file.py  utils.py
ear/cmdline/test/: test_utils.py
ear/core/: __init__.py  allocentric.py  block_aligner.py  bs2051.py  convolver.py  delay.py  geom.py  hoa.py  hoa_adapter.py  hoa_overloads.py  importance.py  layout.py  metadata_input.py  metadata_processing.py  monitor.py  plot_point_source.py  point_source.py  quadrature.py  renderer.py  renderer_common.py  screen_common.py  screen_edge_lock.py  screen_scale.py  subwoofer.py  track_processor.py  util.py
ear/core/data/: 2051_layouts.yaml  README.md  allo_positions.yaml
ear/core/direct_speakers/: panner.py  panner_hoa.py  renderer.py
ear/core/objectbased/: extent.py  (+8 more)
ear/fileio/: __init__.py  utils.py
ear/test/: json.py  test_common.py  test_integrate.py  test_json.py
(+113 files in other folders)
